Add chargeled for recovery
A small program to update the LED indicator based on charging status in recovery. Build-blocked on RECOVERY_VARIANT=twrp so it doesn't interfere with msm8960-common.

* Green LED for charged

* Amber LED for charging

* LED off for all other cases

--- a/recovery/init.rc
+++ b/recovery/init.rc
@@ -35,6 +35,7 @@ on init
     write /sys/class/android_usb/android0/iManufacturer ${ro.product.manufacturer}
     write /sys/class/android_usb/android0/iProduct ${ro.product.model}
     write /sys/class/android_usb/android0/iSerial ${ro.serialno}
+    start chargeled
 
 
 on boot
@@ -44,6 +45,9 @@ on boot
     domainname localdomain
 
     class_start default
+
+service chargeled /sbin/chargeled
+    disabled
 
 service choice_fn /sbin/choice_fn
     oneshot
