--- a/recovery/init.rc
+++ b/recovery/init.rc
@@ -119,6 +119,8 @@ service healthd /sbin/healthd -r
 
 service recovery /sbin/recovery
 
+service offmode_charging /sbin/offmode_charging
+
 service chargeled /sbin/chargeled
     disabled
 
